JWLS-3 Added ui to configure relay setting
